--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-cloudflare": "^5.0.0",
+		"@sveltejs/adapter-vercel": "^5.5.2",
 		"axios": "^1.7.7",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
