redirecion de pago

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "frontend",
-	"version": "0.0.1",
+	"version": "1.0.1",
 	"private": true,
 	"type": "module",
 	"main": "vite.config.js",
 	"keywords": [],
-	"author": "",
+	"author": "Luis Rosas",
 	"license": "ISC",
 	"description": "",
 	"scripts": {
