--- a/package.json
+++ b/package.json
@@ -21,16 +21,30 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest"
 	},
+	"dependencies": {
+		"axios": "^1.7.7",
+		"bcrypt": "^5.1.1",
+		"bcryptjs": "^2.4.3",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"jspdf": "^2.5.2",
+		"jspdf-autotable": "^3.8.4",
+		"mysql2": "^3.11.0",
+		"node-fetch": "^3.3.2",
+		"pdfkit": "^0.15.0",
+		"sweetalert2": "^11.15.10"
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/adapter-vercel": "^5.5.2",
 		"@sveltejs/kit": "^2.15.2",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tsconfig/svelte": "^5.0.4",
 		"@types/cors": "^2.8.17",
-		"@types/eslint": "^9.6.0",
 		"@types/express": "^4.17.21",
 		"@types/jspdf": "^1.3.3",
 		"@types/node": "^22.5.4",
@@ -43,28 +57,12 @@
 		"postcss": "^8.4.45",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "^5.17.3",
 		"svelte-check": "^3.8.6",
 		"svelte-preprocess": "^6.0.2",
-		"svelte2tsx": "^0.7.31",
 		"tailwindcss": "^3.4.10",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.4.3",
+		"vite": "^6.0.7",
 		"vitest": "^2.0.0"
-	},
-	"dependencies": {
-		"@sveltejs/adapter-cloudflare": "^5.0.0",
-		"@sveltejs/adapter-vercel": "^5.5.2",
-		"axios": "^1.7.7",
-		"bcrypt": "^5.1.1",
-		"bcryptjs": "^2.4.3",
-		"cors": "^2.8.5",
-		"dotenv": "^16.4.5",
-		"express": "^4.19.2",
-		"jspdf": "^2.5.1",
-		"mysql2": "^3.11.0",
-		"node-fetch": "^3.3.2",
-		"pdfkit": "^0.15.0"
 	}
 }
